ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /tree
            pathType: Prefix
            backend:
              service:
                name: ecosia
                port:
                  number: 2022
